<resources>
    <string name="app_name">  Assignment1: Simple Calculator</string>
    <string name="hint_for_result_field">Here is the result</string>
    <string name="advBut">ADVANCE - WITH HISTORY</string>
    <string name="standBut">STANDARD - NO HISTORY</string>

    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>

    <string name="addBut">+</string>
    <string name="subBut">-</string>
    <string name="timBut">*</string>
    <string name="divBut">/</string>

    <string name="equalBut">=</string>

    <string name="clearBut">C</string>



</resources>