<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightYellow"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DarkOliveGreen"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/FontSize25"
        android:layout_marginBottom="60dp"/>

    <TextView android:id="@+id/showResText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_for_result_field"
        android:textColorHint="#A1887F"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        >
        <Button
            android:id="@+id/num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/n1"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"
            android:layout_marginEnd="3dp"
            />

        <Button
            android:id="@+id/num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/n2"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"
            android:layout_marginEnd="3dp" />
        <Button
            android:id="@+id/num3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/n3"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"
            android:layout_marginEnd="3dp" />
        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/addBut"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="5dp" >
        <Button
            android:id="@+id/num4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/n4"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"
            android:layout_marginEnd="3dp" />

        <Button
            android:id="@+id/num5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/n5"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"
            android:layout_marginEnd="3dp"/>
        <Button
            android:id="@+id/num6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/n6"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"
            android:layout_marginEnd="3dp"/>
        <Button
            android:id="@+id/subButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/subBut"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"         />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/num7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/n7"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"
            android:layout_marginEnd="3dp"/>

        <Button
            android:id="@+id/num8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/n8"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"
            android:layout_marginEnd="3dp"/>
        <Button
            android:id="@+id/num9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/n9"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"
            android:layout_marginEnd="3dp"/>
        <Button
            android:id="@+id/timButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/timBut"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"         />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/clearBut"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"
            android:layout_marginEnd="3dp"             />

        <Button
            android:id="@+id/num0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/n0"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"
            android:layout_marginEnd="3dp"/>
        <Button
            android:id="@+id/equalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/equalBut"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"
            android:layout_marginEnd="3dp"/>
        <Button
            android:id="@+id/divButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DarkOliveGreen"
            android:text="@string/divBut"
            android:textSize="@dimen/FontSize20"
            style="?android:attr/buttonBarStyle"         />
    </LinearLayout>

    <Button android:id="@+id/toStandardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/LightGoldenrodYellow"
        android:textColor="@color/DarkOliveGreen"
        android:text="@string/standBut"
        android:layout_margin="5dp"/>

    <TextView android:id="@+id/showHistoryText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/FontSize20"/>

</LinearLayout>